--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Staatliches&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
                     <a href="#about" class="nav-link">About</a>
                 </li>
                 <li>
-                    <a href="#portfolio" class="nav-link">Portfoliio</a>
+                    <a href="#portfolio" class="nav-link">Portfolio</a>
                 </li>
                 <li>
                     <a href="#experience" class="nav-link">Experience</a>
@@ -59,26 +60,27 @@
                     leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
                     with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
                     publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <div class="social-media">
+                    <ul class="nav-list">
+                        <li>
+                            <a href="#" class="icon-link">
+                                <i class="fab fa-facebook-square"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="icon-link">
+                                <i class="fab fa-twitter-square"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="icon-link">
+                                <i class="fab fa-twitter-square"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="social-media">
-                <ul class="nav-list">
-                    <li>
-                        <a href="#" class="icon-link">
-                            <i class="fab fa-facebook-square"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="icon-link">
-                            <i class="fab fa-twitter-square"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="icon-link">
-                            <i class="fab fa-dribble-square"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+
         </div>
     </section>
     <section class="services" id="services">
@@ -98,7 +100,7 @@
                 </div>
                 <div class="skill">
                     <div class="icon-container">
-                        <i class="fas fa-code-group"></i>
+                        <i class="fas fa-code"></i>
                     </div>
                     <h1>Web Development</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
@@ -106,7 +108,7 @@
                 </div>
                 <div class="skill">
                     <div class="icon-container">
-                        <i class="fas fa-chart-group"></i>
+                        <i class="fas fa-chart-bar"></i>
                     </div>
                     <h1>ProductStrategy</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
@@ -122,7 +124,7 @@
                 <h6>View Some of My Recent Work</h6>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img">
+                <div class="portfolio-img has-margin-right">
                     <img src="images/portitem1.jpeg" alt="">
                 </div>
                 <div class="portfolio-description">
@@ -134,7 +136,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-description">
+                <div class="portfolio-description has-margin-right">
                     <h6>Web Design</h6>
                     <h1>Product Layout</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industryorem Ipsum is simply
@@ -146,7 +148,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img">
+                <div class="portfolio-img has-margin-right">
                     <img src="images/portitem3.jpeg" alt="">
                 </div>
                 <div class="portfolio-description">
