--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Elsie Madden</title>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Staatliches&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -46,10 +47,10 @@
 
     <section class="about" id="about">
         <div class="container">
-            <div class="profile-img">
+            <div class="profile-img" data-aos="fade-up" data-aos-delay="300">
                 <img src="images/profile.jpeg" alt="">
             </div>
-            <div class="about-details">
+            <div class="about-details" data-aos="fade-down" data-aos-delay="600">
                 <div class="about-heading">
                     <h1>About</h1>
                     <h6>Myself</h6>
@@ -90,7 +91,7 @@
                 <h6>What I can do for you</h6>
             </div>
             <div class="my-skills">
-                <div class="skill">
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
                         <i class="fas fa-layer-group"></i>
                     </div>
@@ -98,7 +99,7 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
                         dummy text of the printing and typesetting industry. </p>
                 </div>
-                <div class="skill">
+                <div class="skill" data-aos="fade-in" data-aos-delay="600">
                     <div class="icon-container">
                         <i class="fas fa-code"></i>
                     </div>
@@ -106,7 +107,7 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
                         dummy text of the printing and typesetting industry. </p>
                 </div>
-                <div class="skill">
+                <div class="skill" data-aos="fade-in" data-aos-delay="900">
                     <div class="icon-container">
                         <i class="fas fa-chart-bar"></i>
                     </div>
@@ -125,9 +126,9 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right">
-                    <img src="images/portitem1.jpeg" alt="">
+                    <img src="images/portitem1.jpeg" alt="" data-aos="fade-left" data-aos-delay="300">
                 </div>
-                <div class="portfolio-description">
+                <div class="portfolio-description" data-aos="fade-right" data-aos-delay="600">
                     <h6>Web Development</h6>
                     <h1>Blog Website</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industryorem Ipsum is simply
@@ -136,7 +137,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-description has-margin-right">
+                <div class="portfolio-description has-margin-right" data-aos="fade-left" data-aos-delay="900">
                     <h6>Web Design</h6>
                     <h1>Product Layout</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industryorem Ipsum is simply
@@ -144,14 +145,14 @@
                     <a href="#" class="cta">View Details</a>
                 </div>
                 <div class="portfolio-img">
-                    <img src="images/portitem2.jpeg" alt="">
+                    <img src="images/portitem2.jpeg" alt="" data-aos="fade-right" data-aos-delay="1200">
                 </div>
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right">
-                    <img src="images/portitem3.jpeg" alt="">
+                    <img src="images/portitem3.jpeg" alt="" data-aos="fade-left" data-aos-delay="1500">
                 </div>
-                <div class="portfolio-description">
+                <div class="portfolio-description" data-aos="fade-right" data-aos-delay="1800">
                     <h6>Web Design</h6>
                     <h1>Product Sketch</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industryorem Ipsum is simply
@@ -167,7 +168,7 @@
                 <h1>Work Experience</h1>
                 <h6>Past and Current Jobs</h6>
             </div>
-            <div class="timeline">
+            <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                 <ul class="">
                     <li class="date" data-date="2011 - Present">
                         <h1>Google</h1>
@@ -193,7 +194,7 @@
             <div class="section-heading">
                 <h1>Contact</h1>
                 <h6>Let's work together</h6>
-                <form action="">
+                <form action="" data-aos="fade-up" data-aos-delay="300">
                     <label for="name">Name :</label>
                     <input type="text" id="name" name="name" placeholder="Enter your name..." required>
                     <label for="email">Email :</label>
@@ -219,8 +220,9 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
     <script src="main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
 </html>
