--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Staatliches&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Cutive+Mono|IBM+Plex+Mono|Oswald|Roboto|Roboto+Condensed&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -161,6 +164,7 @@
                 </div>
             </div>
         </div>
+
     </section>
     <section class="experience" id="experience">
         <div class="container">
@@ -168,7 +172,7 @@
                 <h1>Work Experience</h1>
                 <h6>Past and Current Jobs</h6>
             </div>
-            <div class="timeline" data-aos="fade-down" data-aos-delay="300">
+            <!-- <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                 <ul class="">
                     <li class="date" data-date="2011 - Present">
                         <h1>Google</h1>
@@ -186,9 +190,34 @@
                             dummy text of the printing and typesetting industry</p>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
+        <section>
+            <div class="container">
+                <div class="tab">
+                    <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">London</button>
+                    <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
+                    <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+                </div>
+                <div>
+                    <div id="London" class="tabcontent">
+                        <h3>London</h3>
+                        <p>London is the capital city of England.</p>
+                    </div>
+                    <div id="Paris" class="tabcontent">
+                        <h3>Paris</h3>
+                        <p>Paris is the capital of France.</p>
+                    </div>
+                    <div id="Tokyo" class="tabcontent">
+                        <h3>Tokyo</h3>
+                        <p>Tokyo is the capital of Japan.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </section>
+
+
     <section class="contact" id="contact">
         <div class="container">
             <div class="section-heading">
