changed on html/test

--- a/index.html
+++ b/index.html
@@ -172,28 +172,9 @@
                 <h1>Work Experience</h1>
                 <h6>Past and Current Jobs</h6>
             </div>
-            <!-- <div class="timeline" data-aos="fade-down" data-aos-delay="300">
-                <ul class="">
-                    <li class="date" data-date="2011 - Present">
-                        <h1>Google</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industryorem Ipsum is simply
-                            dummy text of the printing and typesetting industry</p>
-                    </li>
-                    <li class="date" data-date="2008 - 2011">
-                        <h1>Facebook</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industryorem Ipsum is simply
-                            dummy text of the printing and typesetting industry</p>
-                    </li>
-                    <li class="date" data-date="2002 - 2007">
-                        <h1>Microsoft</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industryorem Ipsum is simply
-                            dummy text of the printing and typesetting industry</p>
-                    </li>
-                </ul>
-            </div> -->
         </div>
-        <section>
-            <div class="container">
+        <div>
+            <div class="container" data-aos="fade-down" data-aos-delay="300">
                 <div class="tab">
                     <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">London</button>
                     <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
@@ -214,10 +195,8 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </section>
-
-
     <section class="contact" id="contact">
         <div class="container">
             <div class="section-heading">
