added the cubic directional feature

--- a/index.html
+++ b/index.html
@@ -42,11 +42,50 @@
                 </li>
             </ul>
         </nav>
-        <div class="landing-text">
+        <div class="block landing-text">
             <h1>Elsie Madden</h1>
             <h6>Full-Stack Web Developer</h6>
+            <div class=" dimension">
+                <span class="text font">Above your Expectation, Beyond your Imagination.</span>
+            </div>
+            <div id="wrapper">
+                <div class="viewport">
+                    <div class="cube">
+                        <div class="side">
+                            <div class="cube-image"><a href="#about">About</a></div>
+                        </div>
+                        <div class="side">
+                            <div class="cube-image"><a href="#experience">Experience</a> </div>
+                        </div>
+                        <div class="side">
+                            <div class="cube-image"><a href="#contact">contact</a> </div>
+                        </div>
+                        <div class="side">
+                            <div class="cube-image"><a href="#photography">Photography</a> </div>
+                        </div>
+                        <div class="side">
+                            <div class="cube-image"><a href="#portfolio">Portfolio</a></div>
+                        </div>
+                        <div class="side">
+                            <div class="cube-image active"><a href="#about">About</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </header>
+
+    <!--CLIP-PATH TRIANGLE-->
+    <svg width='0' height='0'>
+        <defs>
+            <clipPath id="cp" clipPathUnits="objectBoundingBox">
+                <path
+                    d="M0.500, 0.945 L0.994, 0.090 L0.006, 0.090 L0.500, 0.945 L0.500, 0.650 L0.262, 0.238 L0.738, 0.237 L0.500, 0.650z">
+                </path>
+            </clipPath>
+        </defs>
+    </svg>
 
     <section class="about" id="about">
         <div class="container">
