added the square feature

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                             <div class="cube-image"><a href="#experience">Experience</a> </div>
                         </div>
                         <div class="side">
-                            <div class="cube-image"><a href="#contact">contact</a> </div>
+                            <div class="cube-image"><a href="#contact">Contact</a> </div>
                         </div>
                         <div class="side">
-                            <div class="cube-image"><a href="#photography">Photography</a> </div>
+                            <div class="cube-image"><a href="#photography">Photo Editing</a> </div>
                         </div>
                         <div class="side">
                             <div class="cube-image"><a href="#portfolio">Portfolio</a></div>
