updataed the about section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Cutive+Mono|IBM+Plex+Mono|Oswald|Roboto|Roboto+Condensed&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -46,32 +47,35 @@
             <h1>Elsie Madden</h1>
             <h6>Full-Stack Web Developer</h6>
             <div class=" dimension">
-                <span class="text font">Above your Expectation, Beyond your Imagination.</span>
+                <span class="text font">"Live above your expectation, beyond your imagination."</span>
+
             </div>
+
             <div id="wrapper">
                 <div class="viewport">
                     <div class="cube">
                         <div class="side">
-                            <div class="cube-image"><a href="#about">About</a></div>
+                            <div class="cube-image"><a href="#about">Blank</a></div>
                         </div>
                         <div class="side">
-                            <div class="cube-image"><a href="#experience">Experience</a> </div>
+                            <div class="cube-image"><a href="#experience">Experience?</a></div>
                         </div>
                         <div class="side">
-                            <div class="cube-image"><a href="#contact">Contact</a> </div>
+                            <div class="cube-image"><a href="#contact">How to reach out?</a></div>
                         </div>
                         <div class="side">
-                            <div class="cube-image"><a href="#photography">Photo Editing</a> </div>
+                            <div class="cube-image"><a href="#photography">Photo editing?</a></div>
                         </div>
                         <div class="side">
-                            <div class="cube-image"><a href="#portfolio">Portfolio</a></div>
+                            <div class="cube-image"><a href="#portfolio">Show me her work</a></div>
                         </div>
                         <div class="side">
-                            <div class="cube-image active"><a href="#about">About</a></div>
+                            <div class="cube-image active"><a href="#about">Who is elsie?</a></div>
                         </div>
                     </div>
                 </div>
             </div>
+            <span class="text font move-me">"Spin Me Around"</span>
         </div>
 
     </header>
@@ -94,15 +98,20 @@
             </div>
             <div class="about-details" data-aos="fade-down" data-aos-delay="600">
                 <div class="about-heading">
-                    <h1>About</h1>
-                    <h6>Myself</h6>
+                    <h1>Who am i?</h1>
+
                 </div>
-                <p>#Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
-                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p class="paragraph-section">Hello! I'm Elsie, a software engineer based in Los Angeles, CA who likes
+                    building things whether it is as creative as recreating the photos I've took from my favorite
+                    sunset, as experimental as rebuilding proteins to produce renewable energy,
+                    or as innovative as building exceptional websites and app that provide intuititve UI with
+                    efficient and forward-thinking backends.
+                    I have a bachelor's degree in
+                    Biochemistry, with a background in allergy and autoimmune automated medical devices. I finished my
+                    master's in Biomedical Engineering and specialized in Carbon MEMS, NEMS and electrochemical devices
+                    (e.g. renewable enery, batteries).
+
+                </p>
                 <div class="social-media">
                     <ul class="nav-list">
                         <li>
@@ -121,7 +130,7 @@
                             </a>
                         </li>
                     </ul>
-                </div>
+                </div> fr5
             </div>
 
         </div>
