--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         href="https://fonts.googleapis.com/css?family=Cutive+Mono|IBM+Plex+Mono|Oswald|Roboto|Roboto+Condensed&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -99,38 +100,52 @@
             <div class="about-details" data-aos="fade-down" data-aos-delay="600">
                 <div class="about-heading">
                     <h1>Who am i?</h1>
-
                 </div>
-                <p class="paragraph-section">Hello! I'm Elsie, a software engineer based in Los Angeles, CA who likes
+                <br>
+                <p class="paragraph-section about">Hello! I'm Elsie, a software engineer based in Los Angeles,
+                    California. I
+                    like
                     building things whether it is as creative as recreating the photos I've took from my favorite
-                    sunset, as experimental as rebuilding proteins to produce renewable energy,
-                    or as innovative as building exceptional websites and app that provide intuititve UI with
-                    efficient and forward-thinking backends.
+                    sunset, as experimental as reassembling nanoparticles to produce energy,
+                    or as innovative as developing competitive websites/app. I like to create products that are truly
+                    unique to the project and reflect their value and aesthetics.
+                    <br>
+                    <br>
                     I have a bachelor's degree in
-                    Biochemistry, with a background in allergy and autoimmune automated medical devices. I finished my
-                    master's in Biomedical Engineering and specialized in Carbon MEMS, NEMS and electrochemical devices
-                    (e.g. renewable enery, batteries).
-
+                    Biochemistry, with a specialized background in allergy and medical devices. I finished my master's
+                    in Biomedical
+                    Engineering and specialized in Carbon MEMS/NEMS (Micro- or Nano- Electro-Mechanical Systems) and
+                    electrochemical devices.
+                    <br>
+                    <br>
+                    Shortly after I finished my Master's, I dabbled in programming as a hobby to build a fun game using
+                    Unreal Engine and C++. Then, that got me into the field of web development where I found myself
+                    enjoying building interactive tools and intuitive and efficient web-based products.
                 </p>
                 <div class="social-media">
                     <ul class="nav-list">
                         <li>
                             <a href="#" class="icon-link">
-                                <i class="fab fa-facebook-square"></i>
+                                <i class="fab fa-facebook"></i>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="icon-link">
-                                <i class="fab fa-twitter-square"></i>
+                                <i class="fab fa-linkedin"></i>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="icon-link">
-                                <i class="fab fa-twitter-square"></i>
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="icon-link">
+                                <i class="fab fa-github-square"></i>
                             </a>
                         </li>
                     </ul>
-                </div> fr5
+                </div>
             </div>
 
         </div>
@@ -138,10 +153,9 @@
     <section class="services" id="services">
         <div class="container">
             <div class="section-heading">
-                <h1>Services</h1>
-                <h6>What I can do for you</h6>
+                <h1>Skills</h1>
             </div>
-            <div class="my-skills">
+            <div class="my-skills paragraph-section">
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
                         <i class="fas fa-layer-group"></i>
