added side vertical line not adjusted

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                 <i class="fab fa-github-square"></i>
               </a>
             </li>
+            <li>
+              <div class="vl"></div>
+            </li>
           </ul>
         </div>
       </div>
