--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
               </a>
             </li>
           </ul>
+          <div class="vl"></div>
         </div>
       </div>
       <!--email-->
