added sidebars absolute position

--- a/index.html
+++ b/index.html
@@ -129,13 +129,21 @@
                 <i class="fab fa-github-square"></i>
               </a>
             </li>
+            <li>
+              <a href="#" class="icon-link">
+                <i class="fab fa-codepen"></i>
+              </a>
+            </li>
           </ul>
           <div class="vl"></div>
         </div>
       </div>
       <!--email-->
       <div>
-        <div>elsie.c.madden@gmail.com</div>
+        <div class="main-right">
+          <div class="email">elsie.c.madden@gmail.com</div>
+          <div class="vl-right"></div>
+        </div>
       </div>
       <!--main section-->
       <div>
