--- a/index.html
+++ b/index.html
@@ -47,18 +47,19 @@
         </li>
       </ul>
     </nav> -->
-    <img class="logo" src="" alt="logo">
+    <img class="logo" src="/images/elsielogo.png" alt="logo">
     <nav>
       <ul class="nav__links">
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Experience</a></li>
+        <li><a href="#">Photo</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
-      <a class="cta" href="#"><button>Contact</button></a>
     </nav>
-
-
+    <a><button class="resume-button">Resume</button></a>
   </header>
+
   <div class="main-content">
     <div class="block landing-text">
       <h1>Elsie Madden</h1>
@@ -71,31 +72,31 @@
         <div class="viewport">
           <div class="cube">
             <div class="side">
-              <div class="cube-image"><a href="#about">Blank</a></div>
+              <div class="cube-image"><a href="#about">publications</a></div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#experience">Experience?</a>
+                <a href="#experience">resume</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#contact">How to reach out?</a>
+                <a href="#contact">experience</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#photography">Photo editing?</a>
+                <a href="#photography">editing</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#portfolio">Show me her work</a>
+                <a href="#portfolio">work</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image active">
-                <a href="#about">Who is elsie?</a>
+                <a href="#about">about</a>
               </div>
             </div>
           </div>
@@ -136,7 +137,7 @@
         <div class="vl"></div>
       </div>
     </div>
-    <!--email-->
+    <!--right section: email-->
     <div>
       <div class="main-right">
         <div class="email">elsie.c.madden@gmail.com</div>
