--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
   <link rel="stylesheet" href="main.css" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Staatliches&display=swap" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css?family=Cutive+Mono|IBM+Plex+Mono|Oswald|Roboto|Roboto+Condensed&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-
 </head>
 
 <body>
@@ -60,10 +52,10 @@
     <a><button class="resume-button">Resume</button></a>
   </header>
 
+  <!--maincontent-->
   <div class="main-content">
     <div class="block landing-text">
       <h1>Elsie Madden</h1>
-
       <div class=" dimension">
         <span class="text font">"Live above your expectation, beyond your imagination."</span>
       </div>
@@ -316,10 +308,13 @@
       </section>
     </div>
   </div>
+
   <!--footer-->
   <footer class="copyright">
-    <p>&copy; 2019 Elsie Madden</p>
+    <p>Designed and Built By Elsie Madden</p>
   </footer>
+
+  <!--scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
   <script src="main.js"></script>
