update profile pic

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
       <ul class="nav__links">
         <li><a href="#">About</a></li>
         <li><a href="#">Work</a></li>
-        <li><a href="#">Experience</a></li>
+        <li><a href="#experience">Experience</a></li>
         <li><a href="#">Photo</a></li>
+        <li><a href="#">Publications</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
@@ -141,11 +142,11 @@
       <section class="about" id="about">
         <div class="container">
           <div class="profile-img" data-aos="fade-up" data-aos-delay="300">
-            <img src="images/profile.jpeg" alt="" />
+            <img src="images/profile1.jpg" alt="" />
           </div>
           <div class="about-details" data-aos="fade-down" data-aos-delay="600">
             <div class="about-heading">
-              <h1>Who am i?</h1>
+              <h1>About Me</h1>
             </div>
             <br />
             <p class="paragraph-section about">
@@ -154,65 +155,23 @@
               recreating the photos I've took from my favorite sunset, as
               experimental as reassembling nanoparticles to produce energy, or
               as innovative as developing competitive websites/app. I like to
-              create products that are truly unique to the project and reflect
+              create products that are truly unique and reflect
               their value and aesthetics.
               <br />
               <br />
               I have a bachelor's degree in Biochemistry, with a specialized
               background in allergy and medical devices. I finished my
               master's in Biomedical Engineering and specialized in Carbon
-              MEMS/NEMS (Micro- or Nano- Electro-Mechanical Systems) and
+              MEMS/NEMS (Micro- or Nano- Electro-Mechanical Systems), microfabrication, and
               electrochemical devices.
               <br />
               <br />
               Shortly after I finished my Master's, I dabbled in programming
               as a hobby to build a fun game using Unreal Engine and C++.
-              Then, that got me into the field of web development where I
+              Then, this hobby led me into the field of web development where I
               found myself enjoying building interactive tools and intuitive
-              and efficient web-based products.
+              web-based products.
             </p>
-          </div>
-        </div>
-      </section>
-      <section class="services" id="services">
-        <div class="container">
-          <div class="section-heading">
-            <h1>Skills</h1>
-          </div>
-          <div class="my-skills paragraph-section">
-            <div class="skill" data-aos="fade-in" data-aos-delay="300">
-              <div class="icon-container">
-                <i class="fas fa-layer-group"></i>
-              </div>
-              <h1>Web Design</h1>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry.Lorem Ipsum is simply dummy text of the
-                printing and typesetting industry.
-              </p>
-            </div>
-            <div class="skill" data-aos="fade-in" data-aos-delay="600">
-              <div class="icon-container">
-                <i class="fas fa-code"></i>
-              </div>
-              <h1>Web Development</h1>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry.Lorem Ipsum is simply dummy text of the
-                printing and typesetting industry.
-              </p>
-            </div>
-            <div class="skill" data-aos="fade-in" data-aos-delay="900">
-              <div class="icon-container">
-                <i class="fas fa-chart-bar"></i>
-              </div>
-              <h1>Product Strategy</h1>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry.Lorem Ipsum is simply dummy text of the
-                printing and typesetting industry.
-              </p>
-            </div>
           </div>
         </div>
       </section>
@@ -273,39 +232,76 @@
         <div class="container">
           <div class="section-heading">
             <h1>Work Experience</h1>
-            <h6>Past and Current Jobs</h6>
           </div>
         </div>
-        <div>
-          <div class="container" data-aos="fade-down" data-aos-delay="300">
+        <div class="work-exp-content">
+          <div class="container experience-content" data-aos="fade-down" data-aos-delay="300">
             <div class="tab">
-              <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">
-                London
+              <button class="tablinks" onclick="openCity(event, 'cj')" id="defaultOpen">
+                [Current Job]
               </button>
-              <button class="tablinks" onclick="openCity(event, 'Paris')">
-                Paris
+              <button class="tablinks" onclick="openCity(event, 'biomems')">
+                BioMEMS/Carbon-MEMS
               </button>
-              <button class="tablinks" onclick="openCity(event, 'Tokyo')">
-                Tokyo
+              <button class="tablinks" onclick="openCity(event, 'thermo')">
+                Thermoplastic Shrink Lab
+              </button>
+              <button class="tablinks" onclick="openCity(event, 'hycor')">
+                Hycor Biomedical
+              </button>
+              <button class="tablinks" onclick="openCity(event, 'rdl')">
+                RDL Reference Lab
+              </button>
+              <button class="tablinks" onclick="openCity(event, 'VA Hospital')">
+                VA San Diego Healthcare
               </button>
             </div>
             <div>
-              <div id="London" class="tabcontent">
-                <h3>London</h3>
-                <p>London is the capital city of England.</p>
+              <div id="cj" class="tabcontent">
+                <h1>Curren Job</h1>
+                <h3>Full-Stack Web Developer</h3>
+                <br>
+                <p> Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industryorem Ipsum is simply dummy text of the
+                  printing and typesetting industryLondon is the capital city of England.</p>
               </div>
-              <div id="Paris" class="tabcontent">
-                <h3>Paris</h3>
-                <p>Paris is the capital of France.</p>
+              <div id="biomems" class="tabcontent">
+                <h1>UC Irvine BioMEMS/Carbon-MEMS Laboratory</h1>
+                <h3>Graduate Researcher</h3>
+                <br>
+                <p>Paris is the capital of France. Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industryorem Ipsum is simply dummy text of the
+                  printing and typesetting industry</p>
               </div>
-              <div id="Tokyo" class="tabcontent">
-                <h3>Tokyo</h3>
+              <div id="thermo" class="tabcontent">
+                <h1>Thermoplastic Shrink Laboratory</h1>
+                <h3>Rotational Graduate Research Student</h3>
+                <br>
                 <p>Tokyo is the capital of Japan.</p>
+              </div>
+              <div id="hycor" class="tabcontent">
+                <h1>Hycor Biomedical, Inc.</h1>
+                <h3>R&D Research Associate (Biochemistry/Instrument Integration)</h3>
+                <br>
+                <p>Tokyo is the capital of Japan.</p>
+              </div>
+              <div id="rdl" class="tabcontent">
+                <h1>Rheumatology Diagnostics (Reference) Laboratory (RDL)</h1>
+                <h3>Research Analyst</h3>
+                <br>
+                <p>Tokyo is the capital of Japan.</p>
+              </div>
+              <div id="VA Hospital" class="tabcontent">
+                <h1>VA San Diego Healthcare System</h1>
+                <h3>Undergraduate Research Assistant</h3>
+                <br>
+                <p>Tokyo is the cwefwefwfwefweapital of Japan.</p>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <section class="photo"></section>
     </div>
   </div>
 
