--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!--maincontent-->
   <div class="main-content">
     <div class="block landing-text">
-      <h1>Elsie Madden</h1>
+      <h1>Elsie Cho</h1>
       <div class=" dimension">
         <span class="text font">"Live above your expectation, beyond your imagination."</span>
       </div>
