fixed the position of the heading section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <!--maincontent-->
   <div class="main-content">
-    <div class="block landing-text">
+    <section class="block title-heading">
       <h1>Elsie Madden</h1>
       <div class=" dimension">
         <span class="text font">"Live above your expectation, beyond your imagination."</span>
@@ -96,7 +96,7 @@
         </div>
       </div>
       <span class="text font move-me">"Spin Me Around"</span>
-    </div>
+    </section>
     <!--sidebar left link social container-->
     <div>
       <div class="social-media main-left">
