--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <img class="logo" src="/images/elsielogo.png" alt="logo">
     <nav>
       <ul class="nav__links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="#experience">Experience</a></li>
+        <li><a href="#portfolio">Work</a></li>
         <li><a href="#">Photo</a></li>
         <li><a href="#">Publications</a></li>
         <li><a href="#">Contact</a></li>
@@ -175,59 +175,6 @@
           </div>
         </div>
       </section>
-      <section class="porfolio" id="portfolio">
-        <div class="container">
-          <div class="section-heading">
-            <h1>Portfolio</h1>
-            <h6>View Some of My Recent Work</h6>
-          </div>
-          <div class="portfolio-item">
-            <div class="portfolio-img has-margin-right">
-              <img src="images/portitem1.jpeg" alt="" data-aos="fade-left" data-aos-delay="300" />
-            </div>
-            <div class="portfolio-description" data-aos="fade-right" data-aos-delay="600">
-              <h6>Web Development</h6>
-              <h1>Blog Website</h1>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and
-                typesetting industryorem Ipsum is simply dummy text of the
-                printing and typesetting industry
-              </p>
-              <a href="#" class="cta">View Details</a>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="portfolio-description has-margin-right" data-aos="fade-left" data-aos-delay="900">
-              <h6>Web Design</h6>
-              <h1>Product Layout</h1>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and
-                typesetting industryorem Ipsum is simply dummy text of the
-                printing and typesetting industry
-              </p>
-              <a href="#" class="cta">View Details</a>
-            </div>
-            <div class="portfolio-img">
-              <img src="images/portitem2.jpeg" alt="" data-aos="fade-right" data-aos-delay="1200" />
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="portfolio-img has-margin-right">
-              <img src="images/portitem3.jpeg" alt="" data-aos="fade-left" data-aos-delay="1500" />
-            </div>
-            <div class="portfolio-description" data-aos="fade-right" data-aos-delay="1800">
-              <h6>Web Design</h6>
-              <h1>Product Sketch</h1>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and
-                typesetting industryorem Ipsum is simply dummy text of the
-                printing and typesetting industry
-              </p>
-              <a href="#" class="cta">View Details</a>
-            </div>
-          </div>
-        </div>
-      </section>
       <section class="experience" id="experience">
         <div class="container">
           <div class="section-heading">
@@ -301,6 +248,76 @@
           </div>
         </div>
       </section>
+      <section class="porfolio" id="portfolio">
+        <div class="container">
+          <div class="section-heading">
+            <h1>Portfolio</h1>
+            <h6>View Some of My Recent Work</h6>
+          </div>
+          <div class="portfolio-item">
+            <div class="portfolio-img has-margin-right">
+              <img src="images/portitem1.jpeg" alt="" data-aos="fade-left" data-aos-delay="300" />
+            </div>
+            <div class="portfolio-description" data-aos="fade-right" data-aos-delay="600">
+              <h6>Web Development</h6>
+              <h1>Blog Website</h1>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and
+                typesetting industryorem Ipsum is simply dummy text of the
+                printing and typesetting industry
+              </p>
+              <a href="#" class="cta">View Details</a>
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <div class="portfolio-description has-margin-right" data-aos="fade-left" data-aos-delay="900">
+              <h6>Web Design</h6>
+              <h1>Product Layout</h1>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and
+                typesetting industryorem Ipsum is simply dummy text of the
+                printing and typesetting industry
+              </p>
+              <a href="#" class="cta">View Details</a>
+            </div>
+            <div class="portfolio-img">
+              <img src="images/portitem2.jpeg" alt="" data-aos="fade-right" data-aos-delay="1200" />
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <div class="portfolio-img has-margin-right">
+              <img src="images/portitem3.jpeg" alt="" data-aos="fade-left" data-aos-delay="1500" />
+            </div>
+            <div class="portfolio-description" data-aos="fade-right" data-aos-delay="1800">
+              <h6>Web Design</h6>
+              <h1>Product Sketch</h1>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and
+                typesetting industryorem Ipsum is simply dummy text of the
+                printing and typesetting industry
+              </p>
+              <a href="#" class="cta">View Details</a>
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <div class="portfolio-description has-margin-right" data-aos="fade-left" data-aos-delay="900">
+              <h6>Web Design</h6>
+              <h1>Product Layout</h1>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and
+                typesetting industryorem Ipsum is simply dummy text of the
+                printing and typesetting industry
+              </p>
+              <a href="#" class="cta">View Details</a>
+            </div>
+            <div class="portfolio-img">
+              <img src="images/portitem2.jpeg" alt="" data-aos="fade-right" data-aos-delay="1200" />
+            </div>
+          </div>
+        </div>
+        
+      </section>
+      
       <section class="photo"></section>
     </div>
   </div>
