--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <li><a href="#about">About</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#portfolio">Work</a></li>
-        <li><a href="#">Photo</a></li>
-        <li><a href="#">Publications</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#photo">Photo</a></li>
+        <li><a href="#publications">Publications</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <a><button class="resume-button">Resume</button></a>
