--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="icon-link">
+            <a href="https://www.instagram.com/elsiemade" class="icon-link">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
