--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Elsie Madden</title>
+  <title>Elsie Cho</title>
   <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
@@ -56,7 +56,7 @@
   <!--maincontent-->
   <div class="main-content">
     <section class="block title-heading">
-      <h1>Elsie Madden</h1>
+      <h1>Elsie Cho</h1>
       <div class=" dimension">
         <span class="text font">"Live above your expectation, beyond your imagination."</span>
       </div>
@@ -65,31 +65,31 @@
         <div class="viewport">
           <div class="cube">
             <div class="side">
-              <div class="cube-image"><a href="#about">publications</a></div>
+              <div class="cube-image"><a href="#photo">4</a></div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#experience">resume</a>
+                <a href="#experience">2</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#contact">experience</a>
+                <a href="#contact">6</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#photography">editing</a>
+                <a href="#publications">5</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#portfolio">work</a>
+                <a href="#about">1</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image active">
-                <a href="#about">about</a>
+                <a href="#portfolio">3</a>
               </div>
             </div>
           </div>
@@ -97,17 +97,18 @@
       </div>
       <span class="text font move-me">"Spin Me Around"</span>
     </section>
+
     <!--sidebar left link social container-->
     <div>
       <div class="social-media main-left">
         <ul class="nav-list left-sticky">
           <li>
-            <a href="#" class="icon-link">
+            <a href="https://www.facebook.com/eunbyuc" class="icon-link">
               <i class="fab fa-facebook"></i>
             </a>
           </li>
           <li>
-            <a href="#" class="icon-link">
+            <a href="https://www.linkedin.com/in/eunbyul-c-51906561/" class="icon-link">
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
@@ -117,7 +118,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="icon-link">
+            <a href="https://github.com/elsiemadden" class="icon-link">
               <i class="fab fa-github-square"></i>
             </a>
           </li>
@@ -133,10 +134,11 @@
     <!--right section: email-->
     <div>
       <div class="main-right">
-        <div class="email">elsie.c.madden@gmail.com</div>
+        <div class="email"><a href="mailto:elsie.c.madden@gmail.com?subject=subject text">elsie.c.madden@gmai.com</a></div>
         <div class="vl-right"></div>
       </div>
     </div>
+
     <!--main section-->
     <div>
       <section class="about" id="about">
@@ -324,7 +326,7 @@
 
   <!--footer-->
   <footer class="copyright">
-    <p> Designed and Built By Elsie Madden</p>
+    <p> Designed and Built By Elsie Cho</p>
   </footer>
 
   <!--scripts-->
