--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <br />
               <br />
               Shortly after I finished my Master's, I dabbled in programming
-              as a hobby to build a fun game using Unreal Engine and C++.
+              as a hobby to build fun applications.
               Then, this hobby led me into the field of web development where I
               found myself enjoying building interactive tools and intuitive
               web-based products.
