testing git push

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <br />
             <p class="paragraph-section about">
-              Hello! I'm Elsie, a software engineer based in Los Angeles,
+              Hello! I'm Elsie, a full-stack web developer based in Los Angeles,
               California. I like building things whether it is as creative as
               recreating the photos I've took from my favorite sunset, as
               experimental as reassembling nanoparticles to produce energy, or
