--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
   <!--maincontent-->
   <div class="main-content">
+    <!--front page-->
     <section class="block title-heading">
       <h1>Elsie Cho</h1>
       <div class=" dimension">
@@ -103,8 +104,8 @@
       <div class="social-media main-left">
         <ul class="nav-list left-sticky">
           <li>
-            <a href="https://www.facebook.com/eunbyuc" class="icon-link">
-              <i class="fab fa-facebook"></i>
+            <a href="https://scholar.google.com/citations?hl=en&user=w1WUX4MAAAAJ&sortby=pubdate&view_op=list_works&authuser=1&gmla=AJsN-F5rtis6A5-bqx1JHHbCjIAJZ8m-LIO9zHQcI0qt_raoOrGzVjXKFt8c5Fe-AfG_dI1Ca1lTmOvvumZo4cHN6hZ8GML3YX9FHjXKHKrzeUH1mvsVEKw" class="icon-link">
+              <i class="fas fa-graduation-cap"></i>
             </a>
           </li>
           <li>
@@ -118,15 +119,16 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/elsiemadden" class="icon-link">
+            <a href="https://github.com/elsie-c" class="icon-link">
               <i class="fab fa-github-square"></i>
             </a>
           </li>
           <li>
-            <a href="#" class="icon-link">
+            <a href="https://codepen.com/elsiemade" class="icon-link">
               <i class="fab fa-codepen"></i>
             </a>
           </li>
+          
         </ul>
         <div class="vl"></div>
       </div>
@@ -360,6 +362,66 @@
         </div>
       </div>
       </section>
+      <section class="publications" id="publications">
+        <div class="container">
+          <div class="section-heading">
+            <h1>Publications & Patents</h1>
+          </div>
+          <div class="box-container">
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Custom Domains</h3>
+                    <p>A short sentence describing this callout is.</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Custom Domains</h3>
+                    <p>A short sentence describing this callout is.</p>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Never Sleeps</h3>
+                    <p>A short sentence describing this callout is.</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Never Sleeps</h3>
+                    <p>A short sentence describing this callout is.</p>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center filter-" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Dedicated</h3>
+                    <p>A short sentence describing this callout is.</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Dedicated</h3>
+                    <p>A short sentence describing this callout is.</p>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
     </div>
   </div>
 
