--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       <section class="photo" id="photo">
         <div class="container">
           <div class="section-heading">
-            <h1>Photo</h1>
+            <h1>Photography</h1>
             <h6>Taken and Edited by Elsie</h6>
           </div>
         <div class="slidershow middle">
@@ -327,19 +327,19 @@
             <input type="radio" name="r" id="r4">
             <input type="radio" name="r" id="r5">
             <div class="slide s1">
-              <img src="./images/portitem1.jpeg" alt="">
+              <img src="./images/12.jpg" alt="">
             </div>
             <div class="slide">
-              <img src="./images/portitem2.jpeg" alt="">
+              <img src="./images/4.jpg" alt="">
             </div>
             <div class="slide">
-              <img src="./images/portitem3.jpeg" alt="">
+              <img src="./images/13.jpg" alt="">
             </div>
             <div class="slide">
-              <img src="./images/profile.jpeg" alt="">
+              <img src="./images/11.jpg" alt="">
             </div>
             <div class="slide">
-              <img src="./images/profile.jpeg" alt="">
+              <img src="./images/dsc15.jpg" alt="">
             </div>
           </div>
     
