--- a/index.html
+++ b/index.html
@@ -253,24 +253,25 @@
           </div>
         </div>
       </section>
-      <section class="publications" id="publications">
+      <section class="portfolio" id="portfolio">
         <div class="container">
           <div class="section-heading">
-            <h1>Publications & Patents</h1>
+            <h1>Portfolio</h1>
+            <h6>View some of my recent work</h6>
           </div>
           <div class="box-container">
             <div class="box-item">
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Custom Domains</h3>
-                    <p>A short sentence describing this callout is.</p>
+                    <h3 class="flip-box-header">Task-it</h3>
+                    <p>A multi-platform task management tool.</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Custom Domains</h3>
-                    <p>A short sentence describing this callout is.</p>
+                    <p>An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</p><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
                 </div>
@@ -280,14 +281,15 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Never Sleeps</h3>
-                    <p>A short sentence describing this callout is.</p>
+                    <h3 class="flip-box-header">Burger Builder</h3>
+                    <p>An interactive web tool to create and order your burger.</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Never Sleeps</h3>
-                    <p>A short sentence describing this callout is.</p>
+                    <p>An interactive web tool to create your own burger using listed ingredients and get an estimated price before ordering.
+                    </p><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
                 </div>
@@ -297,14 +299,14 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center filter-" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Dedicated</h3>
-                    <p>A short sentence describing this callout is.</p>
+                    <h3 class="flip-box-header">MRI Instrument Analyzer</h3>
+                    <p>A real-time MRI Instrument Monitoring Web App.</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Dedicated</h3>
-                    <p>A short sentence describing this callout is.</p>
+                    <p>A real-time web application that monitors, analyzes, and notify the performance of local MRI equipments to users for making more efficient troubleshooting. </p><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
                 </div>
@@ -327,13 +329,13 @@
             <input type="radio" name="r" id="r4">
             <input type="radio" name="r" id="r5">
             <div class="slide s1">
-              <img src="./images/12.jpg" alt="">
+              <img src="./images/13.jpg" alt="">
             </div>
             <div class="slide">
               <img src="./images/4.jpg" alt="">
             </div>
             <div class="slide">
-              <img src="./images/13.jpg" alt="">
+              <img src="./images/12.jpg" alt="">
             </div>
             <div class="slide">
               <img src="./images/11.jpg" alt="">
@@ -353,11 +355,11 @@
         </div>
       </div>
       </section>
-    <section class="porfolio" id="portfolio">
+    <section class="publications" id="publications">
       <div class="container">
         <div class="section-heading">
-          <h1>Portfolio</h1>
-          <h6>View Some of My Recent Work</h6>
+          <h1>Publications & Patents</h1>
+          <h6>View my recent publications / patents</h6>
         </div>
         <div class="portfolio-item">
           <div class="portfolio-img has-margin-right">
