added port align

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 </div>
                 <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
                   <div class="inner color-white">
-                    <p>An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</p><br>
+                    <div class="back-para">An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</div><br>
                     <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
@@ -287,8 +287,8 @@
                 </div>
                 <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
                   <div class="inner color-white">
-                    <p>An interactive web tool to create your own burger using listed ingredients and get an estimated price before ordering.
-                    </p><br>
+                    <div class="back-para">An interactive web tool to create your own burger using listed ingredients and get an estimated price before ordering.
+                    </div><br>
                     <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
@@ -305,13 +305,32 @@
                 </div>
                 <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
                   <div class="inner color-white">
-                    <p>A real-time web application that monitors, analyzes, and notify the performance of local MRI equipments to users for making more efficient troubleshooting. </p><br>
+                    <div class="back-para">A real-time web application that monitors and analyzes the performance of MRI for making more efficient troubleshooting. </div><br>
                     <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Medicaly</h3>
+                    <p>Under Construction</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
+                  <div class="inner color-white">
+                    <p class="back-para">Under Construction
+                    </p><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
           </div>
         </div>
     </section>
