grid instead of flex

--- a/index.html
+++ b/index.html
@@ -330,6 +330,40 @@
                 </div>
               </div>
             </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Task-it</h3>
+                    <p>A multi-platform task management tool.</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
+                  <div class="inner color-white">
+                    <div class="back-para">An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</div><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center filter-" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">MRI Instrument Analyzer</h3>
+                    <p>A real-time MRI Instrument Monitoring Web App.</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
+                  <div class="inner color-white">
+                    <div class="back-para">A real-time web application that monitors and analyzes the performance of MRI for making more efficient troubleshooting. </div><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
             
           </div>
         </div>
